
        * configure.ac, m4/jpeg.m4, m4/png.m4, m4/zlib.m4,
          src/openvrml/OpenVRML/Image.cpp,
          src/openvrml/OpenVRML/doc2.cpp: Improved autoconf macros for
          zlib, libpng, and libjpeg.  These macros now work a bit more
          like AC_PATH_X, and the test result is cached.

        * m4/jpeg.m4:  Fixed cut&paste error.

2002-10-30  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/field.cpp, 
          src/openvrml/OpenVRML/field.h: Added protected default
          constructor, copy constructor, and assignment operator to
          FieldValue.

2002-10-30  S. K. Bose  <bose@pavan.barc.ernet.in>

        * configure.ac, m4/ftflib.m4 : Autoconf macros to check for
          system font files and freetype library.

        * ide-projects/Windows/VisualC6/config.h: include macros for
          system font files.

2002-10-29  S. K. Bose  <bose@pavan.barc.ernet.in>

        * ide-projects/Windows/VisualC6/openvrml.dsp,
          ide-projects/Windows/VisualC6/lookat/lookat.dsp, 
          ide-projects/Windows/VisualC6/openvrml-core/openvrmlcore.dsp,
          ide-projects/Windows/VisualC6/openvrml-gl/openvrmlgl.dsp:
          Accommodate font and defined "HAVE_CONFIG_H"

        * src/lookat/ViewerGlut.cpp: Remove "winconfig.h"

        * src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.cpp:
          Fixed if there is no vector information about character in
          "insertText" method.
  
2002-10-28  S. K. Bose  <bose@pavan.barc.ernet.in>

        * src/openvrml/OpenVRML/font.h,
          src/openvrml/OpenVRML/font.cpp,
          src/openvrml/OpenVRML/vrml97node.cpp,
          src/openvrml/OpenVRML/vrml97node.h,
          src/opevrml/OpenVRML/node.h, src/openvrml/OpenVRML/Viewer.h,
          src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.cpp,
          src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.h:
          To support font based on scalable font (TrueType, Type1) 
          present in the system using FreeType library.
